name:                squiddev-cc
version:             1.0.0.0
synopsis:            My personal website, hosted at squiddev.cc and joncoates.co.uk
homepage:            https://squiddev.cc
license:             BSD3
license-file:        LICENSE
author:              squiddev
category:            Website
build-type:          Simple
cabal-version:       2.0

executable site
  main-is:             site.hs
  build-depends:       base >= 4.9 && < 4.17
                     , SHA >= 1.6 && < 2.0
                     , bytestring >= 0.10 && < 0.12
                     , data-default >= 0.7 && < 0.8
                     , deepseq >= 1.4 && < 2.0
                     , filepath >= 1.4 && < 2.0
                     , hakyll >= 4.12 && < 5.0
                     , hakyll-sass >= 0.2.3 && < 0.3
                     , hsass >= 0.7 && < 0.9
                     , mtl >= 2.2.2 && < 3.0
                     , pandoc >= 2.2 && < 3.0
                     , pandoc-types >= 1.17 && < 2.0
                     , skylighting >= 0.7 && < 0.13
                     , tagsoup >= 0.14 && < 0.15
                     , text >= 1.2 && < 1.3
                     , time >= 1.8 && < 1.12
                     , typed-process >= 0.2.8 && < 0.3
                     , unordered-containers >= 0.2 && < 0.3

  other-modules:
  default-language:    Haskell2010

  ghc-options: -Wextra -Wall -Wno-name-shadowing -Wno-implicit-prelude

  if os(linux)
    ghc-options: -optl-fuse-ld=gold
    extra-libraries: m, pthread
